--- a/create.html
+++ b/create.html
@@ -17,7 +17,7 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
 				</button>
-				<a href="/" class="navbar-brand">愛記帳 iRich</a>
+				<a href="./" class="navbar-brand">愛記帳 iRich</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
 		    	<input type="date" class="form-control" name="date" id="date" placeholder="2016/10/10" required>
 		    </div>
 		    <button type="submit" class="btn btn-success">提交送出</button>
-		    <a href="/"><button type="button" class="btn btn-default">回首頁</button></a>
+		    <a href="./"><button type="button" class="btn btn-default">回首頁</button></a>
 		</form>
 	</div>
 	<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
