--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
 				</button>
-				<a href="/" class="navbar-brand">愛記帳 iRich</a>
+				<a href="./" class="navbar-brand">愛記帳 iRich</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
